--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="headerTextSize">25sp</dimen>
+    <dimen name="icon_size">30dp</dimen>
 
 </resources>
