--- a/app/src/main/res/layout/layout_hienthi_diem.xml
+++ b/app/src/main/res/layout/layout_hienthi_diem.xml
@@ -3,52 +3,134 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgAvatar">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileCircleImageView"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_gravity="center"
+            android:src="@drawable/avt_demo3"
+            app:civ_border_color="@color/imageBorderColor" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView40"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:text="Trần Hạo Nam"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView43"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="7dp"
+        android:background="#CDC8C8"
+        android:gravity="center"
+        android:textSize="24sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView39"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:text="Chọn Học Kỳ:"
+            android:textSize="24sp" />
+
+        <Spinner
+            android:id="@+id/spinner_hocky_hienthidiem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textDirection="firstStrongRtl" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Điêm trung bình học kỳ:" />
+            android:paddingRight="10dp"
+            android:text="Điểm Trung Bình:"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/diemtbcahocky"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColor="#2196F3"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginTop="7dp"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Xếp loại:" />
+            android:paddingRight="10dp"
+            android:text="Xếp Loại:"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/xephanghocsinh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColor="#4CAF50"
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-    <Spinner
-        android:id="@+id/spinner_hocky_hienthidiem"
+    <TextView
+        android:id="@+id/textView38"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="5dp"
+        android:layout_marginTop="7dp"
+        android:background="#CDC8C8"
+        android:gravity="center"
+        android:textSize="24sp" />
 
     <ListView
         android:id="@+id/list_danhsachmondiem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="7dp" />
 </LinearLayout>
