[UPDATES ]  Fix giao diện Thongtinsv và nhâpsv , danhsachlop.xml

--- a/app/src/main/res/layout/activity_edit_thongtinsinhvien.xml
+++ b/app/src/main/res/layout/activity_edit_thongtinsinhvien.xml
@@ -23,6 +23,8 @@
             android:id="@+id/textView25"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
             android:text="Thông tin sinh viên"
             android:textSize="24sp"
             android:textStyle="bold" />
