--- a/app/src/main/res/layout/nhapthongtinsv.xml
+++ b/app/src/main/res/layout/nhapthongtinsv.xml
@@ -21,6 +21,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imgAvatar">
 
+            <TextView
+                android:id="@+id/textView_tennganh4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="THÊM SINH VIÊN"
+                android:textColor="#14140F"
+                android:textSize="28dp"
+                android:textStyle="bold" />
+
             <ImageView
                 android:id="@+id/imgAvatar"
                 android:layout_width="130dp"
@@ -28,7 +38,7 @@
                 android:layout_gravity="center_horizontal"
 
                 android:layout_margin="10dp"
-                android:src="@drawable/avt2" />
+                android:src="@drawable/avt_default" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -119,16 +129,7 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView24"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:layout_gravity="center_vertical|end"
-                        android:layout_marginRight="5dp"
-                        android:background="@drawable/icon8" />
-                </FrameLayout>
+                    android:layout_height="match_parent"/>
 
             </LinearLayout>
 
