--- a/app/src/main/res/layout/list_item_nganh.xml
+++ b/app/src/main/res/layout/list_item_nganh.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/nganhTextView"
+    android:layout_height="wrap_content">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:padding="10dp"/>
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <com.github.ivbaranov.mli.MaterialLetterIcon
+            android:id="@+id/m_icon"
+            android:layout_width="55dp"
+            android:layout_height="60dp"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:id="@+id/nganhTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:text="Tài chính ngân hàng 21 A"
+            android:textColor="#000000"
+            android:textSize="24sp" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
