--- a/app/src/main/res/layout/pin_setup_layout.xml
+++ b/app/src/main/res/layout/pin_setup_layout.xml
@@ -7,6 +7,15 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/textView47"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TẠO MÃ PIN"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="bold" />
+
     <EditText
         android:id="@+id/pinInput"
         android:layout_width="match_parent"
